制作登录注册模块

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
-    <title>首页</title>
+    <title>登录模块</title>
+    <link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css" />
+    <link type="text/css" rel="stylesheet" href="../css/login.css" />
 </head>
 <body>
     <span id="btn-login">登录</span>
     <span id="btn-register">注册</span>
 
-    <div class="bg-login"></div>
-
+    <div class="bg-shade"></div>
+    <div class="box-login">
+        <div class="login-header">
+            <h3>登录</h3>
+            <span class="btn btn-close"><i class="fa fa-times"></i></span>
+        </div>
+        <div class="login-content"></div>
+        <div class="login-footer"></div>
+    </div>
     <script type="text/ejs-tpl" id="tpl">
         <%=  %>
     </script>
