--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,7 +8,14 @@
   <link type="text/css" rel="stylesheet" href="../css/frame.css" />
 </head>
 <body>
+  <section class="block-top-func-line">
+    <div class="logo">
+      <a href="#">woodjs</a>
+    </div>
+    <div class="box-search-input">
 
+    </div>
+  </section>
 
   <script type="text/javascript">
     var requiredModuleList = ['index'];
