--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,8 +12,10 @@
     <div class="logo">
       <a href="#">woodjs</a>
     </div>
-    <div class="box-search-input">
-
+    <div class="search-input">
+      <div>
+        <input type="search" />
+      </div>
     </div>
   </section>
 
