--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,9 +12,12 @@
     <div class="logo">
       <a href="#">woodjs</a>
     </div>
+    <div class="site-intro">
+      专注、专业、友好
+    </div>
     <div class="search-input">
       <div>
-        <input type="search" />
+        <input type="search" placeholder="请输入关键字" />
       </div>
     </div>
   </section>
