--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,28 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
   <title>首页</title>
-  <link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css" />
-  <link type="text/css" rel="stylesheet" href="../css/frame.css" />
+  <link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css"/>
+  <link type="text/css" rel="stylesheet" href="../css/frame.css"/>
 </head>
 <body>
-  <section class="block-top-func-line">
-    <div class="logo">
-      <a href="#">woodjs</a>
+<section class="block-top-func-line">
+  <div class="logo">
+    <a href="#">woodjs</a>
+  </div>
+  <div class="site-intro">
+    专注、专业、友好
+  </div>
+  <div class="search-input-box">
+    <div class="search-select">
+      <span>标签</span>
     </div>
-    <div class="site-intro">
-      专注、专业、友好
-    </div>
-    <div class="search-input">
-      <div>
-        <input type="search" placeholder="请输入关键字" />
-      </div>
-    </div>
-  </section>
+    <input type="search" placeholder="请输入关键字"/>
+    <span class="btn btn-search"><i class="fa fa-search" aria-hidden="true"></i></span>
+  </div>
+</section>
 
-  <script type="text/javascript">
-    var requiredModuleList = ['index'];
-  </script>
-  <script type="text/javascript" src="../js/lib/require-2.2.0.min.js"></script>
-  <script type="text/javascript" src="../js/app/common/require-config.js"></script>
+<script type="text/javascript">
+  var requiredModuleList = ['index'];
+</script>
+<script type="text/javascript" src="../js/lib/require-2.2.0.min.js"></script>
+<script type="text/javascript" src="../js/app/common/require-config.js"></script>
 </body>
 </html>
