--- a/public/html/comment.html
+++ b/public/html/comment.html
@@ -5,34 +5,99 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
   <title>评论</title>
-  <link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css" />
-  <link type="text/css" rel="stylesheet" href="../css/frame.css" />
+  <link type="text/css" rel="stylesheet" href="../css/font-awesome.min.css">
+  <link type="text/css" rel="stylesheet" href="../css/frame.css">
+  <link type="text/css" rel="stylesheet" href="../css/comment.css">
+  <!--[if lt IE 9]>
+  <script type="text/javascript" src="../js/lib/html5shiv.js"></script>
+  <![endif]-->
 </head>
 
 <body>
-  <section class="block-top-func-line">
-    <div class="logo">
-      <a href="#">woodjs</a>
-    </div>
-    <div class="site-intro">
-      专注、专业、友好
-      <content select=""></content>
-    </div>
-    <div class="search-input-box">
-      <div class="search-select">
-        <span>标签</span>
+<div style="width:600px;margin:0 auto;">
+  <section class="block-comment">
+    <ul class="comment-list">
+      <li>
+        <div class="comment-item">
+          <div class="avatar">
+            <a href="#" target="_blank"><img src="../img/avatar.jpg"/></a>
+          </div>
+          <div class="comment-content">
+            <a href="#" target="_blank">不工</a>：呵呵呵呵
+
+            <div class="comment-options">
+              <span class="time">前天 16:04</span>
+              <div>
+                <span class="btn btn-agree">顶<em>[1]</em></span>
+                <span class="btn btn-disagree">踩<em>[2]</em></span>
+                <span class="btn btn-reply">回复</span>
+              </div>
+            </div>
+          </div>
+          <ul class="comment-list comment-list-sub">
+            <li>
+              <div class="comment-item">
+                <div class="avatar">
+                  <a href="#" target="_blank"><img src="../img/avatar.jpg"/></a>
+                </div>
+                <div class="comment-content">
+                  <a href="#" target="_blank">不工</a> 回复 <a href="#" target="_blank">abc</a>：呵呵呵呵
+
+                  <div class="comment-options">
+                    <span class="time">前天 16:04</span>
+                    <div>
+                      <span class="btn btn-agree">顶<em>[1]</em></span>
+                      <span class="btn btn-disagree">踩<em>[2]</em></span>
+                      <span class="btn btn-reply">回复</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="box-comment-input">
+                <textarea class="comment-input" contenteditable="true"></textarea>
+                <div class="comment-tool">
+                  <span class="btn btn-reply">回复</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="comment-item">
+                <div class="avatar">
+                  <a href="#" target="_blank"><img src="../img/avatar.jpg"/></a>
+                </div>
+                <div class="comment-content">
+                  <a href="#" target="_blank">不工</a> 回复 <a href="#" target="_blank">abc</a>：的空间覅金额看风景看风景可冬季减肥胶囊发fiji分集分解奶粉跌幅接近覅就覅姐东风科技客服空间覅金额看风景看风景可冬季减肥胶囊发fiji分集分解奶粉跌幅接近覅就覅姐东风科技客服空间覅金额看风景看风景可冬季减肥胶囊发fiji分集分解奶粉跌幅接近覅就覅姐东风科技客服空间覅金额看风景看风景可冬季减肥胶囊发fiji分集分解奶粉跌幅接近覅就覅姐东风科技客服空间覅金额看风景看风景可冬季减肥胶囊发fiji分集分解奶粉跌幅接近覅就覅姐东风科技客服空间覅金额看风景看风景可冬季减肥胶囊发fiji分集分解奶粉跌幅接近覅就覅姐东风科技客服空间覅金额看风景看风景可冬季减肥胶囊发fiji分集分解奶粉跌幅接近覅就覅姐东风科技客服空间覅金额看风景看风景可冬季减肥胶囊发fiji分集分解奶粉跌幅接近覅就覅姐东风科技客服
+
+                  <div class="comment-options">
+                    <span class="time">前天 16:04</span>
+                    <div>
+                      <span class="btn btn-agree">顶<em>[1]</em></span>
+                      <span class="btn btn-disagree">踩<em>[2]</em></span>
+                      <span class="btn btn-reply">回复</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+    </ul>
+    <div class="box-comment-input">
+      <textarea class="comment-input" contenteditable="true"></textarea>
+      <div class="comment-tool">
+        <span class="btn btn-reply">回复</span>
       </div>
-      <input type="search" placeholder="请输入关键字" />
-      <span class="btn btn-search"><i class="fa fa-search" aria-hidden="true"></i></span>
     </div>
   </section>
+</div>
 
 
-  <script type="text/javascript">
-    var requiredModuleList = ['index'];
-  </script>
-  <script type="text/javascript" src="../js/lib/require-2.2.0.min.js"></script>
-  <script type="text/javascript" src="../js/app/common/require-config.js"></script>
+<script type="text/javascript">
+  var requiredModuleList = ['index'];
+</script>
+<script type="text/javascript" src="../js/lib/require-2.2.0.min.js"></script>
+<script type="text/javascript" src="../js/app/common/require-config.js"></script>
 </body>
 
 </html>
