--- a/public/html/comment.html
+++ b/public/html/comment.html
@@ -92,6 +92,8 @@
   </section>
 </div>
 
+<div class="test-folded-corner"></div>
+
 
 <script type="text/javascript">
   var requiredModuleList = ['index'];
